Fix mobile profile spacing

--- a/style.css
+++ b/style.css
@@ -570,11 +570,11 @@ input {
     }
 
     .chinese-profile {
-        padding-bottom: 5px;
+        padding-bottom: 15px;
     }
 
     .english-profile {
-        padding-top: 5px;
+        padding-top: 15px;
     }
 
     .resume-title {
